# serializer version: 1
# name: TestStickinessInsightActors.test_insight_persons_stickiness_groups_query
  '''
  SELECT name AS name
  FROM
    (SELECT groups.properties___name AS name
     FROM
       (SELECT aggregation_target AS group_key
        FROM
          (SELECT aggregation_target AS aggregation_target,
                  count() AS num_intervals
           FROM
             (SELECT e.`$group_0` AS aggregation_target,
                     toStartOfInterval(toTimeZone(e.timestamp, 'US/Pacific'), toIntervalDay(1)) AS start_of_interval
              FROM events AS e
              WHERE and(equals(e.team_id, 99999), greaterOrEquals(e.timestamp, toStartOfInterval(assumeNotNull(toDateTime('2020-01-01 00:00:00', 'US/Pacific')), toIntervalDay(1))), lessOrEquals(e.timestamp, assumeNotNull(toDateTime('2020-01-19 23:59:59', 'US/Pacific'))), equals(e.event, '$pageview'), notEquals(e.`$group_0`, ''))
              GROUP BY aggregation_target,
                       start_of_interval
              HAVING greater(count(), 0))
           GROUP BY aggregation_target)
        WHERE equals(num_intervals, 7)) AS source
     INNER JOIN
       (SELECT tupleElement(argMax(tuple(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(groups.group_properties, 'name'), ''), 'null'), '^"|"$', '')), toTimeZone(groups._timestamp, 'US/Pacific')), 1) AS properties___name,
               groups.group_type_index AS index,
               groups.group_key AS key
        FROM groups
        WHERE equals(groups.team_id, 99999)
        GROUP BY groups.group_type_index,
                 groups.group_key) AS groups ON equals(groups.key, source.group_key)
     ORDER BY groups.properties___name ASC SETTINGS optimize_aggregation_in_order=1,
                                                    join_algorithm='auto')
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestStickinessInsightActors.test_insight_persons_stickiness_query
  '''
  SELECT name AS name
  FROM
    (SELECT persons.properties___name AS name
     FROM
       (SELECT aggregation_target AS actor_id
        FROM
          (SELECT aggregation_target AS aggregation_target,
                  count() AS num_intervals
           FROM
             (SELECT if(not(empty(e__override.distinct_id)), e__override.person_id, e.person_id) AS aggregation_target,
                     toStartOfInterval(toTimeZone(e.timestamp, 'US/Pacific'), toIntervalDay(1)) AS start_of_interval
              FROM events AS e
              LEFT OUTER JOIN
                (SELECT argMax(person_distinct_id_overrides.person_id, person_distinct_id_overrides.version) AS person_id,
                        person_distinct_id_overrides.distinct_id AS distinct_id
                 FROM person_distinct_id_overrides
                 WHERE equals(person_distinct_id_overrides.team_id, 99999)
                 GROUP BY person_distinct_id_overrides.distinct_id
                 HAVING equals(argMax(person_distinct_id_overrides.is_deleted, person_distinct_id_overrides.version), 0) SETTINGS optimize_aggregation_in_order=1) AS e__override ON equals(e.distinct_id, e__override.distinct_id)
              WHERE and(equals(e.team_id, 99999), greaterOrEquals(e.timestamp, toStartOfInterval(assumeNotNull(toDateTime('2020-01-09 00:00:00', 'US/Pacific')), toIntervalDay(1))), lessOrEquals(e.timestamp, assumeNotNull(toDateTime('2020-01-19 23:59:59', 'US/Pacific'))), equals(e.event, '$pageview'))
              GROUP BY aggregation_target,
                       start_of_interval
              HAVING greater(count(), 0))
           GROUP BY aggregation_target)
        WHERE equals(num_intervals, 2)) AS source
     INNER JOIN
       (SELECT person.id AS id,
               replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, 'name'), ''), 'null'), '^"|"$', '') AS properties___name
        FROM person
        WHERE and(equals(person.team_id, 99999), globalIn(tuple(person.id, person.version),
                                                            (SELECT person.id AS id, max(person.version) AS version
                                                             FROM person
                                                             WHERE and(equals(person.team_id, 99999), globalIn(person.id,
                                                                                                                 (SELECT source.actor_id AS actor_id
                                                                                                                  FROM
                                                                                                                    (SELECT aggregation_target AS actor_id
                                                                                                                     FROM
                                                                                                                       (SELECT aggregation_target AS aggregation_target, count() AS num_intervals
                                                                                                                        FROM
                                                                                                                          (SELECT if(not(empty(e__override.distinct_id)), e__override.person_id, e.person_id) AS aggregation_target, toStartOfInterval(toTimeZone(e.timestamp, 'US/Pacific'), toIntervalDay(1)) AS start_of_interval
                                                                                                                           FROM events AS e
                                                                                                                           LEFT OUTER JOIN
                                                                                                                             (SELECT argMax(person_distinct_id_overrides.person_id, person_distinct_id_overrides.version) AS person_id, person_distinct_id_overrides.distinct_id AS distinct_id
                                                                                                                              FROM person_distinct_id_overrides
                                                                                                                              WHERE equals(person_distinct_id_overrides.team_id, 99999)
                                                                                                                              GROUP BY person_distinct_id_overrides.distinct_id
                                                                                                                              HAVING equals(argMax(person_distinct_id_overrides.is_deleted, person_distinct_id_overrides.version), 0) SETTINGS optimize_aggregation_in_order=1) AS e__override ON equals(e.distinct_id, e__override.distinct_id)
                                                                                                                           WHERE and(equals(e.team_id, 99999), greaterOrEquals(e.timestamp, toStartOfInterval(assumeNotNull(toDateTime('2020-01-09 00:00:00', 'US/Pacific')), toIntervalDay(1))), lessOrEquals(e.timestamp, assumeNotNull(toDateTime('2020-01-19 23:59:59', 'US/Pacific'))), equals(e.event, '$pageview'))
                                                                                                                           GROUP BY aggregation_target, start_of_interval
                                                                                                                           HAVING greater(count(), 0))
                                                                                                                        GROUP BY aggregation_target)
                                                                                                                     WHERE equals(num_intervals, 2)) AS source)))
                                                             GROUP BY person.id
                                                             HAVING and(equals(argMax(person.is_deleted, person.version), 0), less(argMax(toTimeZone(person.created_at, 'US/Pacific'), person.version), plus(now64(6, 'US/Pacific'), toIntervalDay(1))))))) SETTINGS optimize_aggregation_in_order=1) AS persons ON equals(persons.id, source.actor_id)
     ORDER BY persons.properties___name ASC SETTINGS optimize_aggregation_in_order=1,
                                                     join_algorithm='auto')
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
